--- a/meta/hess.yml
+++ b/meta/hess.yml
@@ -3,4 +3,8 @@ name: Hydrology and Earth System Sciences
 category: geo
 citation_style: copernicus
 default_packages:
-  "*": true
+  ams: true
+  latexml: true
+  natbib: true
+  hyperref: true
+  babel: false
