--- a/meta/cogsci.yml
+++ b/meta/cogsci.yml
@@ -3,4 +3,8 @@ name: Cognitive Science Society (CogSci)
 category: computers
 citation_style: apacite
 default_packages:
-  "*": true
+  ams: true
+  latexml: true
+  babel: true
+  hyperref: true
+  natbib: false
