--- a/meta/egu.yml
+++ b/meta/egu.yml
@@ -3,4 +3,8 @@ name: European Geosciences Union (EGU)
 category: geo
 citation_style: copernicus
 default_packages:
-  "*": true
+  ams: true
+  latexml: true
+  natbib: true
+  hyperref: true
+  babel: false
