--- a/meta/gji.yml
+++ b/meta/gji.yml
@@ -3,4 +3,8 @@ name: Geophysical Journal International (GJI)
 category: physics
 citation_style: gji
 default_packages:
-  "*": true
+  ams: true
+  latexml: true
+  babel: true
+  hyperref: true
+  natbib: false
