--- a/meta/ieee_bare_conf.yml
+++ b/meta/ieee_bare_conf.yml
@@ -4,4 +4,8 @@ category: computers
 subcategory: IEEE Transactions
 citation_style: IEEEtran
 default_packages:
-  "*": true
+  ams: true
+  latexml: true
+  babel: true
+  hyperref: true
+  natbib: false
