--- a/meta/jacow.yml
+++ b/meta/jacow.yml
@@ -3,4 +3,8 @@ name: Joint Accelerator Conferences (JACoW)
 category: physics
 citation_style: plain
 default_packages:
-  "*": true
+  ams: true
+  latexml: true
+  babel: true
+  hyperref: true
+  natbib: false
