--- a/meta/plos2015.yml
+++ b/meta/plos2015.yml
@@ -4,4 +4,8 @@ category: generic
 subcategory: PLoS
 citation_style: plos2015
 default_packages:
-  "*": true
+  latexml: true
+  babel: true
+  ams: false
+  natbib: false
+  hyperref: false
