--- a/meta/rsc.yml
+++ b/meta/rsc.yml
@@ -3,4 +3,8 @@ name: The Royal Society of Chemistry (RSC)
 category: bio
 citation_style: rsc
 default_packages:
-  "*": true
+  ams: true
+  latexml: true
+  babel: true
+  hyperref: true
+  natbib: false
