--- a/meta/science.yml
+++ b/meta/science.yml
@@ -4,4 +4,8 @@ category: generic
 subcategory: Science
 citation_style: Science
 default_packages:
-  "*": true
+  ams: true
+  latexml: true
+  babel: true
+  hyperref: true
+  natbib: false
